@@ -40,6 +40,7 @@ off with the hotkey 'm'. See 'help mouse' and 'help bind' for more details.
 
 
 [3.8j]
+* NEW 'show palette fit2rgbformulae'
 * NEW 'set datafile commentschars {"<chars>"}'
 * NEW 'set datafile separator {whitespace | "<char>"}'
 * CHANGE terminal provided by openstep is called "openstep", not "next"
